# SimpleVulkanEngine

./: .gitignore  .gitmodules  Build.md  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini
Level-Editor/: CMakeLists.txt
Level-Editor/cmake/: compile_shaders.cmake  update_submodules.cmake
Level-Editor/lib/: CMakeLists.txt
Level-Editor/resources/assets/models/: Low-Poly-Car.gltf  box.gltf  test_car.gltf  test_cube.gltf
Level-Editor/resources/shaders/: grid.vert.glsl  line.vert.glsl  model.frag.glsl  model.vert.glsl  outline.frag.glsl  outline.vert.glsl
Level-Editor/shaders/: debug_line.vert.glsl  grid.frag.glsl  model.frag.glsl  model_skeletal.vert.glsl  outline.vert.glsl  outline_skeletal.vert.glsl
Level-Editor/src/: AnimationController.cpp  AnimationController.hpp  Model.cpp  Model.hpp  ModelSelectionCPU.hpp  Setup.cpp  Viewport.cpp  Viewport.hpp  main.cpp
Level-Editor/src/Animation/: AnimationController.cpp  AnimationController.hpp
Level-Editor/src/Editor/: Scene.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Level-Editor/src/Layers/: ViewportLayer.cpp  ViewportLayer.hpp
Level-Editor/src/Model/: Model.cpp  ModelSelectionCPU.hpp
Level-Editor/src/Renderer/: CameraController.hpp  DebugRenderer.cpp  DebugRenderer.hpp  EditorRenderer.cpp  EditorRenderer.hpp  GenericTextureDescriptor.cpp  GenericTextureDescriptor.hpp  GridRenderer.cpp  GridRenderer.hpp  ModelRenderer.cpp  ModelRenderer.hpp  SceneEditorRenderer.cpp  SceneEditorRenderer.hpp  Viewport.cpp  Viewport.hpp
Level-Editor/src/UI/: DebugWindow.cpp  DebugWindow.hpp
SGF/: CMakeLists.txt
SGF/include/: Entrypoint.hpp  Render.hpp  SGF.hpp
SGF/include/SGF/: Entrypoint.hpp  Filesystem.hpp  Geometry.hpp  Input.hpp  Layers.hpp  Logging.hpp  Memory.hpp  Profiling.hpp  Render.hpp
SGF/lib/: CMakeLists.txt
SGF/lib/imgui/backends/: imgui_impl_glfw.cpp
SGF/lib/shl/shl/: file.h
SGF/lib/vkl/vkl/: device.h
SGF/src/: Application.hpp  Math.hpp  Profiling.hpp  SGF_Core.cpp  SGF_Core.hpp  SGF_Macros.hpp  Window.cpp  Window.hpp  WindowHandle.cpp  WindowHandle.hpp
SGF/src/Events/: Event.hpp
SGF/src/Filesystem/: File.cpp  File.hpp
SGF/src/Geometry/: AABB.cpp  AABB.hpp  Math.hpp  Ray.hpp
SGF/src/Input/: Cursor.cpp  Cursor.hpp  Input.cpp  Input.hpp
SGF/src/Layers/: ImGuiLayer.cpp  ImGuiLayer.hpp  Layer.cpp  Layer.hpp
SGF/src/Logging/: ErrorCodes.hpp  Logger.hpp
SGF/src/Memory/: BaseAllocation.hpp  MemorySizes.hpp
SGF/src/Profiling/: Profiling.cpp  Timer.hpp
SGF/src/Render/: Camera.hpp  Color.hpp  CommandList.hpp  DebugRenderer.cpp  DebugRenderer.hpp  Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  HostCoherentRingBuffer.hpp  Image.hpp  ImageMemoryAllocator.cpp  ImageMemoryAllocator.hpp  RenderPass.hpp  StagingBuffer.hpp  Texture.cpp  Texture.hpp  Vulkan.hpp
cmake/: compile_shaders.cmake
core/include/: Device.hpp  EventHandler.hpp  Model.hpp  SGF.hpp  SGF_Core.hpp  SGF_Macros.hpp  SGF_Types.hpp  Window.hpp
core/include/Events/: Event.hpp  EventHandler.hpp  InputEvents.hpp  Layer.hpp  LayerStack.hpp  WindowEvents.hpp
core/include/Filesystem/: File.hpp
core/include/Input/: Input.hpp  Keycodes.hpp  Mousecodes.hpp
core/include/Layers/: DockspaceLayer.hpp  ImGuiLayer.hpp  Layer.hpp  LayerEvents.hpp  LayerStack.hpp  ViewportLayer.hpp
core/include/Logging/: ErrorCodes.hpp
core/include/Render/: Camera.hpp  CameraController.hpp  CommandList.hpp  Device.hpp  Display.hpp  GraphicsPipeline.hpp  GridRenderer.hpp  Image.hpp  ImageMemoryAllocator.hpp  ModelRenderer.hpp  RenderContext.hpp  RenderPass.hpp  Swapchain.hpp  UniformBuffer.hpp  Vulkan.hpp
core/src/: Device.cpp  Model.cpp  SGF_Core.cpp  SVE_AABB.h  SVE_Backend.cpp  SVE_Backend.h  SVE_Core.cpp  SVE_Core.cppdwer  SVE_Core.hpp  SVE_Device.hpp  SVE_Display.cpp  SVE_Display.cppwer  SVE_Display.hpp  SVE_Entrypoint.hpp  SVE_Model.cpp  SVE_Model.h  SceneManager.h  Window.cpp  core.h  main.cpp  ui_data.h  vk_types.h
core/src/Events/: Layer.cpp  LayerStack.cpp
core/src/Filesystem/: File.cpp
core/src/Geometry/: AABB.cpp
core/src/Input/: Input.cpp
core/src/Layers/: DockspaceLayer.cpp  ImGuiLayer.cpp  ViewportLayer.cpp
core/src/Render/: Display.cpp  GraphicsPipeline.cpp  GridRenderer.cpp  ImageMemoryAllocator.cpp  ModelRenderer.cpp  RenderPass.cpp  Swapchain.cpp
core/src/render/: CameraController.h  Image.cpp  SVE_GeometryRenderer.cpp  SVE_GeometryRenderer.h  SVE_GridRenderer.cpp  SVE_GridRenderer.h  SVE_ModelRenderer.cpp  SVE_ModelRenderer.h  SVE_RenderPipeline.cpp  SVE_SceneRenderer.cpp  SVE_SceneRenderer.h  SVE_StagingBuffer.h  SVE_SubmitInfo.h  SVE_VertexBuffer.h  UiHandler.cpp
core/src/util/: SVE_Timer.hpp  logging.hpp
editor/src/: SimpleVulkanEditor.cpp  SimpleVulkanEditor.h  run.cpp
lib/: CMakeLists.txt
resources/assets/models/: test_model.gltf
resources/shaders/: grid.frag.glsl  grid.vert.glsl  line.frag.glsl  model.frag.glsl  model.vert.glsl  model_2.frag.glsl  model_2.vert.glsl  test_triangle.vert.glsl
src/: SVE_AABB.cpp  SVE_Backend.cpp  SVE_Backend.h  SVE_Model.cpp  SVE_Model.h  SVE_Ray.h  SceneBuffer.h  SceneManager.h  SimpleVulkanEditor.cpp  SimpleVulkanEditor.h  SimpleVulkanEngine.cpp  core.h  engine_core.cpp  engine_core.h  main.cpp  ui_data.h  vulkan_core.cpp  vulkan_core.h
src/render/: Camera.h  CameraController.h  ModelRenderer.h  ModelVertexBuffer.cpp  ModelVertexBuffer.h  SVE_Descriptor.h  SVE_GeometryRenderer.h  SVE_GridRenderer.cpp  SVE_ImageBuffer.h  SVE_ImageMemoryAllocator.cpp  SVE_ImageMemoryAllocator.h  SVE_ModelRenderer.cpp  SVE_ModelRenderer.h  SVE_RenderPipeline.cpp  SVE_RenderPipeline.h  SVE_SceneRenderer.h  SVE_StagingBuffer.h  SVE_SubmitInfo.h  SVE_UniformBuffer.h  SVE_VertexBuffer.h  StagingBuffer.h  UiHandler.cpp  UiHandler.h  VertexIndexBuffer.h  util.h
test/: CMakeLists.txt  unit_tests.cpp
